first attempt to combine

--- a/design.html
+++ b/design.html
@@ -2,12 +2,104 @@
 <head>
     <title>todo</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="style_drag.css">
 
 </head>
 <body>
 <div id="menu"></div>
-<a href="" class="button add">Add</a>
+<a href="javascript:void(0)" class="button add" data-modal="modal" onclick="Modal.showHideModal()">Add</a>
+
+<div data-modal="modal" class="md-modal md-effect" id="modal">
+    <div class="md-content">
+        <h3>Create new task</h3>
+        <a href="#" onclick="Modal.showHideModal();Modal.cleanForm()"><span>x</span></a>
+        <div id="modal_scroll">
+            <form id="form_data">
+                <ul class="element">
+                    <li>
+                        <input type="checkbox" name="tDeadline" id="t_deadline" value="Task with deadline" onchange="Modal.showHideCat('t_deadline','taskWithDeadline')">
+                        <label for="t_deadline">Task with deadline</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="tTime" id="t_time" value="Task with certain time" onchange="Modal.showHideCat('t_time','t_certain_t')">
+                        <label for="t_time">Task with certain time</label><br>
+                    </li>
+                    <li>
+                        <input type="checkbox" name="tCheckbox" id="t_checkbox" value="Task with checkbox"onchange="Modal.showHideCat('t_checkbox','taskWithCheckbox')" >
+                        <label for="t_checkbox">Task with checkbox</label>
+                    </li>
+                </ul>
+                <div class="element">
+                    <div class="label">
+                        <label for="task_name">Name</label>
+                    </div>
+                    <div class="data">
+                        <input type="text" name="task_name" id="task_name"  onkeyup="removeError(this)" autocomplete="off">
+                    </div>
+                </div>
+                <div class="element">
+                    <div class="label">
+                        <label for="task_desc">Description</label>
+                    </div>
+                    <div class="data">
+                        <textarea name="task_desc" id="task_desc"></textarea>
+                    </div>
+                </div>
+                <div class="element">
+                    <div class="label">
+                        <label for="sel_cat">Choose category</label>
+                    </div>
+                    <div class="data">
+                        <select id="sel_cat">
+                            <option>Personal</option>
+                            <option>Work</option>
+                            <option>Shopping</option>
+                        </select>
+                    </div>
+
+                </div>
+                <div class="element" id="taskWithDeadline">
+                    <div class="label">
+                        <label for="task_deadline">Deadline</label>
+                    </div>
+                    <div class="data">
+                        <input type="datetime-local" name="task_deadline" id="task_deadline">
+                    </div>
+                </div>
+                <div class="element" id="t_certain_t">
+                    <div class="label">
+                        <label for="task_time">Time to do this</label>
+                    </div>
+                    <div class="data">
+                        <input type="time" name="task_time" id="task_time" onkeyup="removeError(this)">
+                    </div>
+                </div>
+                <div class="element" id="taskWithCheckbox">
+                    <div class="label">
+                        <label for="task_checkbox" >Name of checklabel</label>
+                    </div>
+                    <div class="data">
+                        <input type="text" name="taskCheckbox" id="task_checkbox" onkeyup="removeError(this)">
+                        <input type="button" value="Add" onclick="Modal.addCheckOption()">
+                        <input type="button" value="Delete" onclick="Modal.delCheckOption()">
+                        <ul id="ulCheckbox">
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                    <input type="button" id="create" value="Create" onclick="addTask()">
+                    <input type="submit" id="show_message" style="display: none">
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+<div class="md-overlay"></div>
+
+
 
 <div id="addButton"></div>
 
@@ -17,9 +109,9 @@
     <li class="header-name">Done</li>
 </ul>
 
-<ul class="stickies left" ondrop="drop(event)" ondragover="allowDrop(event)">
+<ul id="planned" ondrop="drop(event)" ondragover="allowDrop(event)">
 
-    <li class="sticky" id="11" draggable="true" ondragstart="drag(event)">
+  <!--  <li class="sticky" id="11" draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title11</h2>
 
@@ -48,14 +140,14 @@
         <h2>title15</h2>
 
         <p>Group options are shared between all member containers and are set on the first instantiation of a member
-            container.</p><h5>12:12:12</h5></li>
+            container.</p><h5>12:12:12</h5></li>-->
 
 </ul>
 
-<ul class="stickies CENTER" ondrop="drop(event)" ondragover="allowDrop(event)">
+<ul id="started" ondrop="drop(event)" ondragover="allowDrop(event)">
 
 
-    <li class="sticky" id="22"draggable="true" ondragstart="drag(event)">
+   <!-- <li class="sticky" id="22"draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title22</h2>
 
@@ -78,13 +170,13 @@
         <h2>title25</h2>
 
         <p>Group options are shared between all member containers and are set on the first instantiation of a member
-            container.</p><h5>12:12:12</h5></li>
+            container.</p><h5>12:12:12</h5></li>-->
 
 </ul>
 
 <ul class="stickies RIGHT" ondrop="drop(event)" ondragover="allowDrop(event)">
 
-    <li class="sticky" id="31" draggable="true" ondragstart="drag(event)">
+  <!--  <li class="sticky" id="31" draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title31</h2>
 
@@ -113,9 +205,12 @@
         <h2>title36</h2>
 
         <p>Group options are shared between all member containers and are set on the first instantiation of a member
-            container.</p><h5>12:12:12</h5></li>
+            container.</p><h5>12:12:12</h5></li>-->
 </ul>
 
 </body>
+<script src="js/modal.js"></script>
+<script src="js/couch.js"></script>
+<script src="js/script.js"></script>
 <script src="drag.js"></script>
 </html>
