--- a/paralax.html
+++ b/paralax.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Parallax</title>
-    <link href="css/main.css" rel="stylesheet" type="text/css"/>
+    <link href="paralax.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="pss_main">
