--- a/paralax.html
+++ b/paralax.html
@@ -15,7 +15,7 @@
     <div class="pss_slides">
         <ul> <!-- slides -->
             <li>
-                <img src="images/to-do-list.jpg" alt="image01"/>
+                <img src="to-do-list.jpg" alt="image01"/>
             </li>
         </ul>
 
