--- a/design.html
+++ b/design.html
@@ -4,28 +4,10 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="style_drag.css">
-	 <link rel="stylesheet" href="style_drager.css">
+
 </head>
 <body>
-<div id="menu">
-    <div id="main">
-        <h3>Category</h3>
-        <div class="container" data-bind="sortable: tasks">
-            <div class="item">
-                <span data-bind="visible: !$root.isTaskSelected($data)">
-                    <a href="#" data-bind="text: name, click: $root.selectedTask"></a>
-                </span>
-                <span data-bind="visibleAndSelect: $root.isTaskSelected($data)">
-                    <input data-bind="value: name, event: { blur: $root.clearTask }" />
-                </span>  
-            </div>
-        </div>
-
-        <div class="item" data-bind="draggable: { data: newTask, isEnabled: allowNewTask }">
-            <span data-bind="text: name"></span>
-        </div>
-    </div>
-</div>
+<div id="menu"></div>
 <a href="javascript:void(0)" class="button add" data-modal="modal" onclick="Modal.showHideModal()">Add</a>
 
 <div data-modal="modal" class="md-modal md-effect" id="modal">
@@ -129,7 +111,7 @@
 
 <ul id="planned" ondrop="drop(event)" ondragover="allowDrop(event)">
 
- <li class="sticky" id="11" draggable="true" ondragstart="drag(event)">
+  <!--  <li class="sticky" id="11" draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title11</h2>
 
@@ -165,7 +147,7 @@
 <ul id="started" ondrop="drop(event)" ondragover="allowDrop(event)">
 
 
-    <li class="sticky" id="22"draggable="true" ondragstart="drag(event)">
+   <!-- <li class="sticky" id="22"draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title22</h2>
 
@@ -192,9 +174,10 @@
 
 </ul>
 
-<ul class="stickies RIGHT" ondrop="drop(event)" ondragover="allowDrop(event)">
 
-    <li class="sticky" id="31" draggable="true" ondragstart="drag(event)">
+<ul id="finished" ondrop="drop(event)" ondragover="allowDrop(event)">
+
+  <!--  <li class="sticky" id="31" draggable="true" ondragstart="drag(event)">
         <div class="delete">&#x2718;</div>
         <h2>title31</h2>
 
@@ -225,18 +208,10 @@
         <p>Group options are shared between all member containers and are set on the first instantiation of a member
             container.</p><h5>12:12:12</h5></li>-->
 </ul>
-<script type='text/javascript' src='ext/jquery-1.9.1.js'></script>
-<script type="text/javascript" src="ext/jquery-ui.js"></script>
-<script type='text/javascript' src="ext/knockout-3.1.0.js"></script>
-<script type='text/javascript' src="build/knockout-sortable.min.js"></script>
-
-<script src="drager.js"></script>
-
 
 </body>
-
+<script src="drag.js"></script>
 <script src="js/modal.js"></script>
 <script src="js/couch.js"></script>
 <script src="js/script.js"></script>
-<script src="drag.js"></script>
 </html>
