search by cat.,login on paralax,work with checkbox

--- a/design.html
+++ b/design.html
@@ -16,7 +16,7 @@
     	<button id="Add" onclick="text()"  >Add category</button>
      </div>
 
-    <li class="stick" id="1" draggable="true" ondragstart="drag(event)">
+    <!--<li class="stick" id="1" draggable="true" ondragstart="drag(event)">
 			<button class="delet" onclick="delet(1)">&#x2718;</button>
         <h2>Shop</h2>
 
@@ -27,7 +27,7 @@
 
     <li class="stick"  id="3"draggable="true" ondragstart="drag(event)">
 			<button class="delet" onclick="delet(3)">&#x2718;</button>
-        <h2>Home</h2>
+        <h2>Home</h2>-->
 </ul>
 
 
@@ -75,9 +75,7 @@
                     </div>
                     <div class="data">
                         <select id="sel_cat">
-                            <option>Personal</option>
-                            <option>Work</option>
-                            <option>Shopping</option>
+
                         </select>
                     </div>
 
