--- a/design.html
+++ b/design.html
@@ -138,7 +138,8 @@
 	<div class="no" >NO</div>  
 	
 </div>
-
+<div id="box-inner">
+</div>
 </body>
 <script src="drager.js"></script>
 <script src="drag.js"></script>
