change login a bit, delete unused files,add img

--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 
     <script type="application/javascript">
         const CouchBDHOST = 'http://localhost:5984/';
-        const auth = "Basic Y291Y2g6Y291Y2g=";
+        const auth = "Basic Y291Y2g6Y291Y2g="; // hashed credentials couch:couch
         function displayError(errorMsg) {
             alert(errorMsg);
         }
