add couch to registration

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
                 <div>
                     <input type="button" id="create" value="Create" onclick="Modal.addNewTask()">
-                    <input type="submit" id="show_message" style="display: none">
+                    <input type="submit" id="show_message">
                 </div>
             </form>
 
