--- a/paralax.html
+++ b/paralax.html
@@ -26,7 +26,7 @@
                             </div>
                             <div>
                                 <input type="button" value="Log in" onclick="Couch.saveLoginToCookie()" />
-                                <a href="#">First visit?</a>
+                                <a href="registration.html">First visit?</a>
                             </div>
                         </form>
                     </section>
