--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<button id="submit" onclick="myFunction()" style="display:none">Add category</button>
       	</div>
 
-	<ul id="category" ondrop="drop(event)" ondragover="allowDrop(event)">
+	<ul id="category" ondrop="droper(event)" ondragover="allowDroper(event)">
 
 	</ul>
 
