--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
 
-<div id="addButton"></div>
+<div id="logout"><a href="#" onclick="Couch.logout()">Logout</a></div>
 
 <ul id="header">
     <li class="header-name">In Plan</li>
