--- a/registration.html
+++ b/registration.html
@@ -46,7 +46,7 @@
 
 
 
-      var function Submit(){
+      function Submit(){
             var userRegex = /^[a-z0-9_-]{3,16}$/;
             var passwordRegex=/^[a-z0-9_-]{6,18}$/;
             var
