--- a/registration.html
+++ b/registration.html
@@ -12,7 +12,7 @@
 <div class="container">
     <section id="content">
 
-        <form action="">
+              <form name="form" >
 
             <div id="errorBox"></div>
             <div id="name_form">
